redmine/redmine-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redmine
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: redmine
  template:
    metadata:
      labels:
        app: redmine
    spec:
      containers:
      - image: ghcr.io/dysnomia-studio/redmine:main
        name: redmine
        ports:
        - containerPort: 3000
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 50m
            memory: 300Mi
          limits:
            cpu: 1000m
            memory: 2000Mi
      imagePullSecrets:
      - name: github
