redmine/redmine-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: redmine-ingressroute

spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`bugs.dysnomia.studio`)
    kind: Rule
    services:
    - name: redmine-svc
      port: 80
    middlewares:
      - name: security
  tls:
    secretName: redmine-tls-secret
